assets/main.css
/* ... */
  @media only screen 
	and (max-device-width: 768px) 
	and (-webkit-min-device-pixel-ratio: 2) { 
		.section_title{
			font-size: 2.5rem;
		}
		.category_image{
			height: auto;
		}
		.category_subtitle{
			font-size: 2.5rem;
			padding-right: 30px;
		}
		.category_title{
			font-size: 4.5rem;
		}
		.category_title.index{
			position: absolute;
			bottom: 100px;
		}
		.card_category_title{
			font-size: 2.2rem;
		}
		.category.fadeIn{
			display: flex;
			justify-content: center;
			align-items: center;
		}
		/* .index{
			font-size: 2rem;
		} */
		.stackPhone{
			display: block;
			margin-top: 5%;
		}
		.site_title_container{
			width: 100%;
			flex-direction: column;
			padding-top: 10vh;
			padding-bottom: 5vh;
		}
		.category.fadeIn{
			margin-bottom: 0;
		}
		.site_title{
			color: #1a1a1a;
			margin-left: 0;
			font-size: 5rem;
		}
		.card_category_description{
			font-size: 1.4rem;
		}
		.card_description{
			font-size: 2.2rem;
		}
		/* .card_description.index{
			font-size: 1rem;
		} */
		.content_text{
			font-size: 1.4rem;
			/* display: flex; */
			flex-direction: column;
		}
		.content_text_no_margin{
			font-size: 2.5rem;
		}
		.image_text{
			font-size: 1.4rem;
		}
		.caption_title{
			font-size: 2rem;
		}
		.caption_description{
			font-size: 2rem;
		}
		.caption_image{
			width: 75px;
			height: 75px;
		}
		.card{
			height: 800px;
			border-color: #8c8c8c;
			margin-bottom: 5%;
		}
		.card_full{
			height: 55vh;
			border-color: #8c8c8c;
			margin-bottom: 5%;
		}
		.card_image{
			height: 400px;
		}
		.card_image_full{
			height: 35vh;
		}
		.relative{
			height: 20vh;
		}
		.card_title{
			font-size: 3.4rem;
			padding-bottom: 2%;
		}
		/* .card_title.index{
			font-size: 1.8rem;
			padding-bottom: 2%;
		} */
		.card_tag_container{
			font-size: 3rem;
		}
		.card_tag_container_relative{
			left: 0%;
		}
		.button_circle{
			width: 120px;
			height: 120px;
			border-radius: 60px;
			font-size: 2rem;
		}
		.button_circle_arrow{
			width: 120px;
			height: 120px;
			border-radius: 60px;
			font-size: 2rem;
			bottom:	-64px;
			left: calc(50% - 60px);
		}
		.card_tag{
			font-size: 2rem;
			/* padding: 3px; */
		}
		.button_secondary{
			font-size: 2rem;
			padding: 30px;
			-webkit-appearance: button;
			/* position: absolute; */
		}
		.button_primary{
			font-size: 2rem;
			padding: 30px;
			-webkit-appearance: button;
			/* position: absolute; */
		}
		
		.footer{
			font-size: 2rem;
			flex-wrap: wrap;
		}
		.summary_title{
			font-size: 3rem;
			margin-top: 40px;
		}
		.summary_description{
			font-size: 30px;
			font-size: 1.8rem;
		}
		.parallax{
			background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)),
			url("heroshot.jpg");
			display: block;
			justify-content: center;
			/* width: 100vw; */
			padding-left: 4%;
			padding-right: 4%;
		}
		.halfwidth{
			width: 100%;
		}
		.fadeIn{
			font-size: 2.3em;
			margin-right: 0 !important;
			padding-right: 0;
			max-width: 100%;
		}
	.card_category{
		width: 80%;
		height: fit-content;
	}
		.card{
		width: 80%;
		font-size: 1.4rem;
	}
	.width_33{
		width: 100%;
	}
	.width_66{
		width: 100%;
	}
	.width_25{
		width: 48%;
	}
		.width_50{
		width: 100%
	}
	.fixed{
		width: 48%;
	}
	.single-table {
		width: 100%;
	}
	.container_summary{
		flex-wrap: wrap;
		min-height: 0;
	}
	.container_summary_short{
		flex-wrap: wrap;
	}
	.container_content_stack{
		width: 100%;
	}
	.vertical{
		max-width: calc(100vw - 100px);
		/* margin-left: 3%; */
		/* margin-right: 3%; */
	}
	.section_summary{
		width: 100%
	}
	.section_summary_text{
		width: 100%
	}
	.logo{
		height: 80px;
	}
	header.container{
		/* width: 100px !important; */
		font-size: 3rem;
		padding-right: 3%;
		margin-right: 0;
	}
	.tiny{
		max-width: fit-content;
		max-height: 300px;
	}
	.topnav a {
		display: none;}
	.topnav a.icon {
	  float: right;
	  display: block;
	}
	.topnav a.icon:hover{
		color: var(--highlight-color);
	}
	.topnav.responsive {
		position: relative;
		float: none;
	}
	.topnav.responsive a.icon {
	  position: absolute;
	  right: 0;
	  top: 0;
	  font-size: 3rem;
	}
	.topnav.responsive a {
		position: relative;
		padding-bottom: 20px;
	  float: none;
	  display: block;
	  text-align: left;
	  border-bottom-color: white;
	  font-size: 2.3rem;
	}
	.logo.responsiveLogo {
		display: none;
	}
	.sideBySideItem_isLast{
		padding-right: 2%;
	}
  }
  
  @media screen and (max-width: 900px){
	.halfwidth{
		width: 100%;
		margin-right: 30px;
	}
	.card_category{
		width: 60%;
		height: fit-content;
	}
		.card{
		width: 60%;
	}
	.container_summary{
		flex-wrap: wrap;
	}
	.section_summary{
		width: 100%
	}
	.section_summary_text{
		width: 100%
	}
	header.container{
		width: 100%;
	}
	  .topnav a {
		display: none;}
	.topnav a.icon {
	  float: right;
	  display: block;
	}
	.topnav a.icon:hover{
		color: var(--highlight-color);
	}
	  .topnav.responsive {
		position: relative;
		float: none;
	}
	.topnav.responsive a.icon {
	  position: absolute;
	  right: 0;
	  top: 0;
	}
	.topnav.responsive a {
		position: relative;
		padding-top: 10px;
	  float: none;
	  display: block;
	  text-align: left;
	  border-bottom-color: white;
	}
	.container_aboutCourses{
	  flex-direction: column;
  }
  }







/* UNUSED */


.container_home{
	margin: 0 auto;
	background-image: url("heroshot.jpg");
	background-attachment: fixed;
    background-position: 90% 0;
    background-repeat: no-repeat;
    /*background-size: 100%;*/
	height: 500px;
	max-width: 100%;
	text-align: center;
	vertical-align: middle;
	/*line-height: 25px;*/
	padding-top: 125px;
	/*padding-bottom: 75px;*/
}

@media only screen and (min-width: 1200px) {
	.container_home{
		background-size: 100%;
		height: 50vw;
		padding-top: 10vw;
	}
	h3{
		font-size: none;
		font-size: 1.5vw;
	}
	h1{
		font-size: 4vw;
	}
}
/* ... */

